--- a/css/styles.css
+++ b/css/styles.css
@@ -14,26 +14,64 @@ body{
 }
 
 img {
-  display: block;
   width: 100%;
 }
 
+#lighter {
+  display: block;
+  position: fixed;
+  margin-left: 65%;
+  margin-top: 23%;
+  width: 5%;
+  height: 5%;
+  z-index: 1;
+}
+
+#logo {
+  display: block;
+  position: relative;
+  margin-left: 30%;
+  top: 0%;
+  width: 40%;
+  height: 40%;
+  z-index: 3;
+}
+
+#wave {
+  display: block;
+  position: fixed;
+  margin-left: 0;
+  margin-top: 30%;
+  width: 110%;
+  z-index: 3;
+  opacity: 0.8;
+}
+
 #sailor {
+  display: block;
+  position: fixed;
+  margin-left: 0;
+  margin-top: 15%;
   width:104%;
   height:104%;
+  z-index: 4;
 }
 
 #seagull1 {
+  display: block;
   position: fixed;
   margin-left: 70%;
   margin-top: 44%;
   width:40%;
   height:40%;
+  z-index: 5;
 }
 #seagull2 {
+  display: block;
   position: fixed;
   margin-left: -2%;
   margin-top: 71%;
   width:30%;
   height:30%;
+  z-index: 6;
 }
