--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,20 @@ body{
   overflow-x: hidden;
   overflow-y: scroll;
 }
+
 .scene {
   padding: 0;
   margin: 0;
+}
+
+.container{
+  
+}
+
+.down{
+  display: block;
+  position: fixed;
+  margin-top: 3270px;
 }
 
 img {
@@ -18,9 +29,64 @@ img {
   width: 100%;
 }
 
+#lights {
+  opacity: 0.4;
+  position: fixed;
+  margin-left:0%;
+  margin-top: -5%;
+  width:120%;
+  height:120%;
+  z-index: 100;
+  mix-blend-mode: overlay;
+
+}
+
+
+
+#logo{
+  position: fixed;
+  margin-top: 5%;
+  margin-left: 30%;
+  width:40%;
+  height:40%;
+  z-index: 25;
+}
+
+#lighter{
+  position: fixed;
+  margin-top: 40%;
+  margin-left: 80%;
+  width:5%;
+  height:5%;
+  z-index: 10;
+}
+
+
+#land{
+  position: fixed;
+  margin-top: 10%;
+  margin-left: 0%;
+  width:100%;
+  height:100%;
+  z-index: 5;
+}
+
+
 #sailor {
-  width:104%;
-  height:104%;
+  margin-left: -8%;
+  margin-top: 18%;
+  width:120%;
+  height:120%;
+  z-index: 20;
+}
+
+#clouds {
+  position: fixed;
+  margin-left: 0%;
+  margin-top: 0%;
+  width:100%;
+  height:100%;
+  z-index: 20;
 }
 
 #seagull1 {
@@ -29,11 +95,14 @@ img {
   margin-top: 44%;
   width:40%;
   height:40%;
+  z-index: 30;
 }
+
 #seagull2 {
   position: fixed;
-  margin-left: -2%;
+  margin-left: 0%;
   margin-top: 71%;
   width:30%;
   height:30%;
+  z-index: 30;
 }
