--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+html {overflow-x: hidden;}
+
 body{
   padding: 0;
   margin:0;
@@ -5,7 +7,6 @@ body{
   background-attachment:scroll;
   background-repeat: no-repeat;
   background-size: 100%;
-  overflow-x: hidden;
 }
 
 .scene {
@@ -23,13 +24,13 @@ img {
 }
 
 #lights {
-  opacity: 0.4;
+  opacity: 0.7;
   position: fixed;
   margin-left:0%;
   margin-top: -5%;
   width:120%;
   height:120%;
-  z-index: 100;
+  z-index: 150;
   mix-blend-mode: overlay;
 
 }
@@ -142,30 +143,55 @@ img {
   -webkit-transform-origin:bottom;
 }
 
+#wave3 {
+  display: block;
+  position: fixed;
+  margin-left: 0;
+  margin-top: 42%;
+  width: 110%;
+  z-index: 4;
+  opacity: 1.0;
+  -moz-animation: 6s ease 0s normal none infinite swing3;
+  -moz-transform-origin:center;
+  -webkit-animation:swing3 6s infinite ease-in-out;
+  -webkit-transform-origin:bottom;
+}
+
 @-moz-keyframes swing{
+    0%{-moz-transform:rotate(-6deg)}
+    50%{-moz-transform:rotate(6deg)}
+    100%{-moz-transform:rotate(-6deg)}
+}
+
+@-webkit-keyframes swing{
+    0%{-webkit-transform:rotate(-6deg)}
+    50%{-webkit-transform:rotate(6deg)}
+    100%{-webkit-transform:rotate(-6deg)}
+
+}
+
+@-moz-keyframes swing2{
+    0%{-moz-transform:rotate(-1deg)}
+    50%{-moz-transform:rotate(1deg)}
+    100%{-moz-transform:rotate(-1deg)}
+}
+
+@-webkit-keyframes swing2{
+    0%{-webkit-transform:rotate(-1deg)}
+    50%{-webkit-transform:rotate(1deg)}
+    100%{-webkit-transform:rotate(-1deg)}
+}
+
+@-moz-keyframes swing3{
     0%{-moz-transform:rotate(-2deg)}
     50%{-moz-transform:rotate(2deg)}
     100%{-moz-transform:rotate(-2deg)}
 }
 
-@-webkit-keyframes swing{
+@-webkit-keyframes swing3{
     0%{-webkit-transform:rotate(-2deg)}
     50%{-webkit-transform:rotate(2deg)}
     100%{-webkit-transform:rotate(-2deg)}
-
-}
-
-@-moz-keyframes swing2{
-    0%{-moz-transform:rotate(-3deg)}
-    50%{-moz-transform:rotate(4deg)}
-    100%{-moz-transform:rotate(-3deg)}
-}
-
-@-webkit-keyframes swing2{
-    0%{-webkit-transform:rotate(-3deg)}
-    50%{-webkit-transform:rotate(4deg)}
-    100%{-webkit-transform:rotate(-3deg)}
-
 }
 
 #wave3 {
@@ -256,13 +282,7 @@ opacity: 0.5;
   width:50%;
   height:50%;
   z-index: 800;
-  opacity: 0;
   transition: opacity 0.5s ease;
-}
-
-
-#k_popup.active {
-  opacity: 1;
 }
 
 #b_popup {
